Several big changes - Adds left/right column layout modules for some pages. Layouts can now be cleaner and a little more readable. - Adds speakers page. When adjusting speakers, refer to the key midway up and make sure you update the talk/workshop times accordingly. - Some other miscellaneous fixes - 32% more ninjas

--- a/source/stylesheets/base/_variables.scss
+++ b/source/stylesheets/base/_variables.scss
@@ -21,6 +21,7 @@ $dark-gray:    #333;
 $medium-gray:  #455A64;
 $light-gray:   #ddd;
 $red:          #F44336;
+$orange:       #e29a46;
 $sand:         #f7f6f1;
 $light-purple: #C1AFD1;
 $dark-purple:  #684C82;
